Scroll animation added

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                                 <p></p>
                                 <ul class="social-icons">
                                     <ion-icon name="logo-github"></ion-icon>
+                                    <span class="iconName">GitHub</span>
                                     <ion-icon name="logo-linkedin"></ion-icon>
+                                    <span class="iconName">LinkedIn</span>
                                     <ion-icon name="logo-stackoverflow"></ion-icon>
+                                    <span class="iconName">StackOverflow</span>
                                 </ul>
                                 <p></p>
                                 <a href="#profile" class="ca3-scroll-down-link ca3-scroll-down-arrow"
