About Section Added

--- a/index.html
+++ b/index.html
@@ -4,30 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="./images/icon.png" type="image/x-icon">
-
-
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/stars.css">
     <link rel="stylesheet" href="./css/scroll.css">
     <link rel="stylesheet" href="./css/timeline.css">
     <link rel="stylesheet" href="./css/typewriter.css">
-
-
     <title>Kishan</title>
-
-
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 </head>
 
 <body class=" js-fullheight body">
-
-
-    <div class="page js-fullheight">
+    <div #main class="page js-fullheight">
         <header id="header" class=" js-fullheight">
             <div class="overlay"></div>
             <div class="stars">
@@ -67,11 +58,66 @@
             </div>
         </header>
     </div>
-    <!-- <div class="header" id="myHeader">
-        <h2>My Header</h2>
-    </div> -->
-    <div class="experiencce">
-        
+    <div class="pageHeading">
+        <h1>About Me</h1>
+    </div>
+    <div id="profile" class="profile">
+        <div class="summary">
+            <div class="profilePic">
+            </div>
+            <div class="aboutMe">
+                <h2 class="hello">Hello There!</h2>
+                <p>Hi I'm Kishan and I graduated from Biju Patnaik University of Technology in 2018 with a degree in
+                    Computer Science.
+                    My interests are in Web Development and I love to create beautiful performant products with
+                    delightful user experiences.</p>
+                <p>Having 3+ years of experience in designing and developing web applications. Proven ability in
+                    optimizing web functionalities that improve user experience. </p>
+            </div>
+        </div>
+        <div class="personalDetails">
+            <!-- <div class="profileDetails">
+                <p>Full Name : Kishan Kumar Mund</p>
+                <p>Phone : +91-8895416379</p>
+                <p>Email : kishan.mund@outlook.com</p>
+                <p>Website : </p>
+                <p>Location : Mumbai, India</p>
+            </div> -->
+            <div class="profileDetails">
+                <ul class="info">
+                    <li><span class="first-block">Full Name:</span><span class="second-block">Kishan Kumar Mund</span></li>
+                    <li><span class="first-block">Phone:</span><span class="second-block">+91-8895416379</span></li>
+                    <li><span class="first-block">Email:</span><span class="second-block">kishan.mund@outlook.com</span></li>
+                    <li><span class="first-block">Website:</span><span class="second-block">https://kishanmund.github.io/Portfolio/</span></li>
+                    <li><span class="first-block">Location:</span><span class="second-block"> Mumbai, India</span></li>
+                </ul>
+            </div>
+            <div class="skills">
+                <div class="progress">
+                    <progress value="45" max="100"> 45% </progress>
+                <p>HTML/HTML5</p>
+                </div>
+                <div class="progress">
+                    <progress value="45" max="100"> 45% </progress>
+                <p>CSS/CSS3</p>
+                </div>
+                <div class="progress">
+                    <progress value="45" max="100"> 45% </progress>
+                <p>JavaScript</p>
+                </div>
+                <div class="progress">
+                    <progress value="45" max="100"> 45% </progress>
+                <p>Angular</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pageHeading">
+        <h1>Resume</h1>
+    </div>
+    <div #experiencce class="experiencce">
+
         <div class="timeline">
             <div class="expHead">
                 <h3>Work Experience</h3>
@@ -86,9 +132,7 @@
                             coding.
                         </li>
                         <li>
-                            Established presentation consistency across Chrome, Safari,
-                            Firefox and other common browser interfaces.
-    
+                            Established presentation consistency across Chrome, Safari, Firefox and other common browser interfaces. 
                         </li>
                         <li>
                             Coded websites using HTML, CSS and Angular languages.
@@ -127,57 +171,9 @@
             </div>
         </div>
     </div>
-    <!-- <div id="profile" class="profile">
-        <img src="./images/icon.png" alt="">
-    </div> -->
-    <!-- <div id="resume" class="resume">
-        <div class="container">
-            <div class="row">
-                <div class="col-6 myResume">
-                    <h2>My Resume</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12  js-fullheight">
-                    <ul class="timeline">
-                        <li class="timeline-heading">
-                            <div>
-                                <h3>Work Experience</h3>
-                            </div>
-                        </li>
-                        <li class="animate-box timeline-unverted fadeInUp animated-fast">
-							<div class="timeline-badge"><ion-icon name="briefcase-outline"></ion-icon></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li>
-                        <li class="timeline-inverted animate-box fadeInUp animated-fast">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <script src="main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
 
 </html>
